--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
+body {
+    display: flex; 
+    justify-content: center;
+    align-content: center;
+}
+
 .gameBoard {
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
-    width: 25%; 
-    
+    max-width: 450px;  
+    margin-top: 15vh; 
 }
 
 .gameSquare {
@@ -11,14 +17,14 @@
     display: flex;
     flex-wrap: wrap; 
     transition: 0.2s;
-    height: 40px; 
-    width: 40px; 
+    height: 50px; 
+    width: 50px; 
     position: relative; 
 }
 
 .gameSquare > div {
-    width: 20px; 
-    height: 20px; 
+    width: 25px; 
+    height: 25px; 
     transition: 0.2s;
     position: absolute; 
     z-index: 10; 
